--- a/src/main/resources/properties/configuration.properties
+++ b/src/main/resources/properties/configuration.properties
@@ -1,3 +1,3 @@
-configuration.profiles=
-configuration.suites=rest_api
+configuration.profiles=web/desktop/chrome
+configuration.suites=web_api
 configuration.environments=
