--- a/src/main/resources/properties/configuration.properties
+++ b/src/main/resources/properties/configuration.properties
@@ -1,3 +1,3 @@
 configuration.profiles=web/desktop/chrome
-configuration.suites=web_api
+configuration.suites=web_app,rest_api
 configuration.environments=
