--- a/src/main/resources/properties/configuration.properties
+++ b/src/main/resources/properties/configuration.properties
@@ -1,3 +1,4 @@
 configuration.profiles=web/desktop/chrome
 configuration.suites=web_app
 configuration.environments=
+engine.composite-paths=steps/composite.steps
